# DiffGR

./: .gitignore  DiffGR_v1_仕様書.md  README.md  READMR.md  UI_ISSUES.md  agent_cli.toml  requirements.txt
diffgr_rust_gui/: Build Release.cmd  CHANGELOG.md  COMPLETE_PARITY_AUDIT.md  COMPLETE_PYTHON_SOURCE_AUDIT.json  Cargo.toml  Check Test Build.cmd  Clear Cache.cmd  DiffGR Tools.cmd  Doctor.cmd  GUI_COMPLETION_AUDIT.json  NATIVE_FUNCTIONAL_PARITY.md  NATIVE_FUNCTIONAL_PARITY_SCENARIOS.json  NATIVE_PYTHON_PARITY.md  NATIVE_PYTHON_PARITY_AUDIT.json  Native Functional Parity Verify.cmd  Native Python Parity Verify.cmd  PYTHON_COMPATIBILITY.md  PYTHON_PARITY.md  PYTHON_PARITY_MANIFEST.json  Package Windows.cmd  Python Compat Smoke.cmd  Python Compat Verify.cmd  Python Compatibility Mode.cmd  Python GUI Completion Verify.cmd  Python Parity Audit.cmd  Python Parity Smoke.cmd  Quality Review.cmd  README.md  Run DiffGR Review.cmd  Run Low Memory.cmd  Run Smooth.cmd  SELF_REVIEW.md  SELF_REVIEW_AUDIT.json  STRICT_PYTHON_PARITY.md  Self Review.cmd  TESTING.md  Test.cmd  UT Depth Verify.cmd  UT Matrix Verify.cmd  UT_DEPTH_AUDIT.json  (+38 more)
diffgr_rust_gui/examples/: minimal.diffgr.json  multi_file.diffgr.json
diffgr_rust_gui/schemas/: slice_patch.schema.json
diffgr_rust_gui/scripts/: README.md  apply_diffgr_layout.ps1  apply_diffgr_layout.sh  apply_diffgr_state.ps1  apply_diffgr_state.sh  apply_diffgr_state_diff.ps1  apply_diffgr_state_diff.sh  apply_slice_patch.ps1  apply_slice_patch.sh  approve_virtual_pr.ps1  approve_virtual_pr.sh  autoslice_diffgr.ps1  autoslice_diffgr.sh  (+54 more)
(+273 files in other folders)
