[package]
name = "diffgr_gui"
version = "0.4.1"
edition = "2021"
rust-version = "1.92"
description = "Native Rust/egui GUI and CLI for reviewing and operating DiffGR JSON files"
license = "MIT"

[lib]
name = "diffgr_gui"
path = "src/lib.rs"

[[bin]]
name = "diffgr_gui"
path = "src/main.rs"

[[bin]]
name = "diffgrctl"
path = "src/bin/diffgrctl.rs"

[dependencies]
eframe = { version = "0.34.1", features = ["persistence"] }
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
